force-app/main/default/objects/FieloPLT__PointsUsage__c/FieloPLT__PointsUsage__c.object-meta.xml
<CustomObject>
    <description>It audits and tracks Point origin and usage.</description>
    <label>Point Usage</label>
    <nameField>
        <displayFormat>PU-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>