force-app/main/default/objects/FieloPLT__PointsUsage__c/fields/FieloPLT__PointsSource__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointsSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It refers to the Point origin (e.g. Transaction, Challenge).</description>
    <inlineHelpText>It refers to the Point origin (e.g. Transaction, Challenge).</inlineHelpText>
    <label>Point Source</label>
    <referenceTo>FieloPLT__Point__c</referenceTo>
    <relationshipLabel>Points Usage (Points Source)</relationshipLabel>
    <relationshipName>PointsSource</relationshipName>
    <type>Lookup</type>
</CustomField>