force-app/main/default/objects/FieloPLT__PointsUsage__c/fields/FieloPLT__Quantity__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Quantity__c</fullName>
    <description>Number of Points used from Point Source.</description>
    <inlineHelpText>Number of Points used from Point Source.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>