force-app/main/default/objects/FieloPLT__PointsUsage__c/fields/FieloPLT__UsedPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UsedPoints__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points used in a specific Transaction.</description>
    <inlineHelpText>Points used in a specific Transaction.</inlineHelpText>
    <label>Used Points</label>
    <referenceTo>FieloPLT__Point__c</referenceTo>
    <relationshipLabel>Points Usage (Used Points)</relationshipLabel>
    <relationshipName>UsedPoints</relationshipName>
    <type>Lookup</type>
</CustomField>